[package]
name = "rrolling"
version = "0.1.0"
edition = "2021"

[lib]
name = "rrolling"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
reqwest = { version = "0.11.12", features = ["blocking", "json", "stream", "multipart"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
lpcg = {path="../lpcg"}
